buildscript {
	repositories {
		mavenLocal()
		maven { url "http://download.osgeo.org/webdav/geotools/" } // before central - it's workaround for jai_core dependency
		mavenCentral()
	}
}

allprojects {
	apply plugin: 'idea'
	apply plugin: 'maven'

	idea {
		module {
			inheritOutputDirs = false
			outputDir = file('bin')
			testOutputDir = file('bin')
		}
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'eclipse'
	apply plugin: 'idea'

	sourceCompatibility = 1.8
	targetCompatibility = 1.8
	compileJava.options.encoding = "windows-1251"

	repositories {
		mavenLocal()
		mavenCentral()
	}

	eclipse {
		jdt {
			sourceCompatibility = 1.8
			targetCompatibility = 1.8
		}
		classpath { containers 'org.springsource.ide.eclipse.gradle.classpathcontainer' }
	}

	version = '1.0'

	jar {
		exclude {
			it.file.getAbsolutePath().startsWith(sourceSets.main.output.resourcesDir.getAbsolutePath())
		}
		manifest.attributes provider: 'E.Nesterov'
	}
}

project(':jvg') {
	dependencies {
		compile project(':hiscript')
		compile project(':toi')
		compile project(':satisui')

		compile("org.slf4j:slf4j-api:1.7.7")
		compile("org.jdom:jdom:2.0.2")
		compile group: 'org.w3c.css', name: 'sac', version: '1.3'
		compile group: 'net.sourceforge.cssparser', name: 'cssparser', version: '0.9.23'
		compile files('../libs/jai_codec-1.1.3.jar')
		compile files('../libs/jai_core-1.1.3.jar')
	}
}

project(':hiscript') {
	dependencies {
		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	}

	test {
		useJUnitPlatform()
	}
}

project(':toi') {
	dependencies {
		compile project(':satisui')
		compile("org.jdom:jdom:2.0.2")
		compile files('../libs/jai_codec-1.1.3.jar')
		compile files('../libs/jai_core-1.1.3.jar')
	}
}

project(':satisui') {
}
